--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^2.3.2"
   },
   "homepage": "https://vpasquar.github.io/doggoTinder/",
   "scripts": {
